--- a/DDEngine.vcxproj.filters
+++ b/DDEngine.vcxproj.filters
@@ -61,5 +61,8 @@
     <ClInclude Include="VAO.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="DDShell.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
