--- a/DDEngine.vcxproj
+++ b/DDEngine.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{c606a75a-bf3b-4c94-abe6-0e01727cd92e}</ProjectGuid>
     <RootNamespace>DDEngine</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>ImpulseForceEngine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -152,7 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="DDShell.h" />
+    <ClInclude Include="IFEShell.h" />
     <ClInclude Include="EBO.h" />
     <ClInclude Include="MeshDD.h" />
     <ClInclude Include="ShaderSystemDDEngine.h" />
