--- a/DDEngine.vcxproj.filters
+++ b/DDEngine.vcxproj.filters
@@ -73,7 +73,7 @@
     <ClInclude Include="VAO.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="DDShell.h">
+    <ClInclude Include="IFEShell.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
