--- a/DDEngine.vcxproj
+++ b/DDEngine.vcxproj
@@ -137,7 +137,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CameraDDSystem.cpp" />
-    <ClCompile Include="DDEngine.cpp" />
+    <ClCompile Include="ImpulseForceEngine.cpp" />
     <ClCompile Include="EBOSystem.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="MainShaderSystemDDEngine.cpp" />
