--- a/DDEngine.vcxproj.filters
+++ b/DDEngine.vcxproj.filters
@@ -21,7 +21,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DDEngine.cpp">
+    <ClCompile Include="ImpulseForceEngine.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="glad.c">
